--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h3{
     color: #54966B;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    font-size: 2.5rem;
 
 }
 
@@ -92,6 +93,12 @@ a{
 	font-weight:bold;
 }
 
+blockquote{
+    border-left : #D7B344 5px solid;
+    font-size: 20px;
+    font-style: normal;
+    
+}
 
 
 /* -------------------------------------------------------------------------- */
