--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ footer a:link{
 
     #tepcv{
         max-width: 100%;
-        background-image: url("http://incamp.cecile-gaultier.fr/wp-content/uploads/2020/11/recycling.svg");
+        background-image: url("https://incamp.cecile-gaultier.fr/wp-content/uploads/2020/11/recycling.svg");
         content: "";
         background-repeat: no-repeat;
         background-position-x: right;
@@ -682,7 +682,7 @@ footer a:link{
 
     #quiz{
         max-width: 100%;
-        background-image: url("http://incamp.cecile-gaultier.fr/wp-content/uploads/2020/11/ronds-bg-quiz.svg");
+        background-image: url("https://incamp.cecile-gaultier.fr/wp-content/uploads/2020/11/ronds-bg-quiz.svg");
         content: "";
         background-repeat: no-repeat;
         background-size: 100%;
